changed img to svg

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </div>
     <div class="main-content-cont">
         <div class="player-icon-cont">
+            <svg viewBox="0 0 115 122" ></svg>
         </div>
         <div class="score-board-cont">
             <!-- <div class="score"><span class="winner">1</span><span class="loser">0</span></div>
@@ -34,6 +35,7 @@
             <div class="score"><span class="winner">1</span><span class="loser">0</span></div> -->
         </div>
         <div class="computer-icon-cont">
+            <svg viewBox="0 0 115 122" ></svg>
         </div>
     </div>
     <footer>
@@ -41,6 +43,6 @@
         <img data-value="paper" src="./assets/paper.svg" alt="">
         <img data-value="scissor" src="./assets/scissor.svg" alt="">
     </footer>
-    <script src="./script.js"></script>
+    <script src="./script.js" type="module"></script>
 </body>
 </html>
