fixed some bugs

--- a/index.html
+++ b/index.html
@@ -24,18 +24,12 @@
     </div>
     <div class="main-content-cont">
         <div class="player-icon-cont">
-            <svg viewBox="0 0 115 122" ></svg>
+            <div class="p_svg spanner"></div>
         </div>
         <div class="score-board-cont">
-            <!-- <div class="score"><span class="winner">1</span><span class="loser">0</span></div>
-            <div class="score"><span class="winner">1</span><span class="loser">0</span></div>
-            <div class="score"><span class="winner">1</span><span class="loser">0</span></div>
-            <div class="score"><span class="winner">1</span><span class="loser">0</span></div>
-            <div class="score"><span class="winner">1</span><span class="loser">0</span></div>
-            <div class="score"><span class="winner">1</span><span class="loser">0</span></div> -->
         </div>
         <div class="computer-icon-cont">
-            <svg viewBox="0 0 115 122" ></svg>
+            <div class="comp_svg spanner"></div>
         </div>
     </div>
     <footer>
