Added score board

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             <div class="comp_svg spanner"></div>
         </div>
     </div>
+    <div class="main-scorer">
+        <div class="winner">0</div>
+        <div class="loser">0</div>
+    </div>
     <footer>
         <img data-value="rock" src="./assets/stone.svg" alt="">
         <img data-value="paper" src="./assets/paper.svg" alt="">
